--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -1,14 +1,14 @@
 tests_config:
 
 ######################################MY DASHBOARD TESTS########################################
-- module: src.test.python.ui.automation.implementation.crm.tests_my_dashboard_module.Test_My_Dashboard_Actions
-  class: MyDashboardActionsTest
-  tests:
+#- module: src.test.python.ui.automation.implementation.crm.tests_my_dashboard_module.Test_My_Dashboard_Actions
+#  class: MyDashboardActionsTest
+#  tests:
 #    - test_edit_event_my_dashboard
-    - test_email_icon
-    - test_sms_icon
-    - test_sorting_columns
-    - test_searching_by_columns
+#    - test_email_icon
+#    - test_sms_icon
+#    - test_sorting_columns
+#    - test_searching_by_columns
 #
 #######################################MODULES ARE OPENS#########################################
 #- module: src.test.python.ui.automation.implementation.crm.tests_base_crm.Test_Check_Modules
@@ -83,13 +83,14 @@ tests_config:
 #    - test_clients_mass_assign
 #
 #####################################################TASKS##################################################
-#- module: src.test.python.ui.automation.implementation.crm.tests_tasks_module.Test_Event
-#  class: AddEventTaskModule
-#  tests:
+- module: src.test.python.ui.automation.implementation.crm.tests_tasks_module.Test_Event
+  class: AddEventTaskModule
+  tests:
 #    - test_email_icon
 #    - test_sms_icon
 #    - test_mass_edit_tasks
 #    - test_searching_by_columns
+    - test_sorting_columns
 #
 #- module: src.test.python.ui.automation.implementation.crm.tests_tasks_module.Test_Calendar_View
 #  class: CalendarView
@@ -154,12 +155,14 @@ tests_config:
 #    - test_create_affiliate
 #
 #########################################FINANCIAL TRANSACTIONS##############################################
-#- module: src.test.python.ui.automation.implementation.crm.tests_financial_transactions.Test_Tab_Financial_Transaction_Module
-#  class: TabFinancialTransaction
-#  tests:
+- module: src.test.python.ui.automation.implementation.crm.tests_financial_transactions.Test_Tab_Financial_Transaction_Module
+  class: TabFinancialTransaction
+  tests:
 #    - test_check_all_tab_from_financial_transactions
 #    - test_check_searching_by_column # Check filters in columns -  all required columns (customer name, date, transaction type, trading account number, transaction number)
 #    - test_check_search_via_button # Check search using search button
+     - test_check_email_popup
+
 #
 ############################################CAMPAIGN MODULE###############################################
 #- module: src.test.python.ui.automation.implementation.crm.tests_compaigns_module.Test_Campaigns_Module
@@ -197,4 +200,10 @@ tests_config:
 #  class: DocumentModuleTest
 #  tests:
 #    - test_searching_by_columns
+
+#########################################TRADING MODULE###############################################
+- module: src.test.python.ui.automation.implementation.crm.tests_trading_account.Test_Trading_Account_Module
+  class: TradingAccountModuleTest
+  tests:
+    - test_sorting_columns
 
