--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -2,22 +2,19 @@ brands:
 
 #- name: newforexstage2
 #  config_file: newforexstage2.yml
-
+#
 #- name: ptbanc
 #  config_file: ptbanc.yml
 #
 #- name: q8
 #  config_file: q8.yml
 #
-- name: kontofx
-  config_file: kontofx.yml
+#- name: kontofx
+#  config_file: kontofx.yml
 #
 #- name: brokerz
 #  config_file: brokerz.yml
-#
-#- name: 4xfx
-#  config_file: 4xfx.yml
-#
-#- name: tradospot
-#  config_file: tradospot.yml
-#
+
+- name: 4xfx
+  config_file: 4xfx.yml
+
