--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -6,8 +6,8 @@ brands:
 #- name: capitalmarketsbanc
 #  config_file: capitalmarketsbanc.yml
 
-- name: brokerxp
-  config_file: brokerxp.yml
+#- name: brokerxp
+#  config_file: brokerxp.yml
 
 #- name: kaya_fx
 #  config_file: kaya_fx.yml
