--- a/src/main/python/ui/crm/model/BrandsXpath/newforexstage2_xpath.yml
+++ b/src/main/python/ui/crm/model/BrandsXpath/newforexstage2_xpath.yml
@@ -12,3 +12,6 @@ ClientsPage:
   country_button: "//tr[@id='customAdvanceSearch']//td[8]//span[@class='multiselect-selected-text']"
   country_field: "//tr[@id='customAdvanceSearch']//td[8]//input[@class='form-control multiselect-search']"
   country_click: "//label[contains(text(),'%s')]"
+FinancialTransactionsPage:
+  client_name_element:  "(//td[4]/div/a)[%s]"
+  modified_time_element: "(//*[contains(@id,'row')]/td[12])[%s]"
