--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -1,6 +1,6 @@
 tests_config:
 
-######################################MY DASHBOARD TESTS########################################
+####################################### MY DASHBOARD TESTS ########################################
 - module: src.test.python.ui.automation.implementation.crm.tests_my_dashboard_module.Test_My_Dashboard_Actions
   class: MyDashboardActionsTest
   tests:
@@ -10,7 +10,7 @@ tests_config:
     - test_sorting_columns
     - test_searching_by_columns
 
-#######################################FILTERS TESTS###############################################
+####################################### FILTERS TESTS ###############################################
 - module: src.test.python.ui.automation.implementation.crm.tests_create_filters.Test_Create_Filter
   class: FilterModulesTest
   tests:
@@ -20,7 +20,7 @@ tests_config:
     - test_create_filter_help_desk
     - test_create_filter_trading_account_module
 
-############################################LEADS###################################################
+########################################## LEADS ###################################################
 - module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Tab_Leads_Module
   class: TabLeadsModuleCRM
   tests:
@@ -43,14 +43,14 @@ tests_config:
     - test_edit_lead_pencil_icon
     - test_check_email_popup
 
-####################################CONVERT LEAD##########################################
+################################### CONVERT LEAD ##########################################
 - module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Leads_Module
   directive: reload_configuration
   class: LeadModuleTest
   tests:
     - test_perform_convert_lead   # Creates a lead and converts it to a client
 
-####################################CLIENTS###############################################
+#################################### CLIENTS ###############################################
 
 - module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Searching_Clients
   class: SearchingClientsTestCRM
@@ -67,7 +67,7 @@ tests_config:
   tests:
     - test_clients_mass_assign
 
-#####################################TASKS##################################################
+##################################### TASKS ##################################################
 - module: src.test.python.ui.automation.implementation.crm.tests_tasks_module.Test_Event
   class: AddEventTaskModule
   tests:
@@ -117,7 +117,7 @@ tests_config:
   tests:
     - test_make_credit_out_crm # preconditions: convert lead, make credit in
 
-#####################################SEND MAIL FROM CLIENT'S DETAILS##########################
+##################################### SEND MAIL FROM CLIENT'S DETAILS ##########################
 - module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Send_Email
   class: SendEmailTestCRM
   tests:
@@ -133,13 +133,13 @@ tests_config:
   tests:
     - test_crm_edit_trading_account  # edit trading account
 
-#######################################AFFILIATES MODULE##########################################
+####################################### AFFILIATES MODULE ##########################################
 - module: src.test.python.ui.automation.implementation.crm.tests_affiliates_module.Test_Affiliates_Module
   class: AffiliateModule
   tests:
      - test_create_affiliate
 
-######################################TASKS CALENDAR VIEW########################################
+###################################### TASKS CALENDAR VIEW ########################################
 - module: src.test.python.ui.automation.implementation.crm.tests_tasks_module.Test_Calendar_View
   class: CalendarView
   tests:
@@ -147,7 +147,7 @@ tests_config:
      - test_check_month_tab
      - test_check_week_tab
 
-######################################FINANCIAL TRANSACTIONS######################################
+###################################### FINANCIAL TRANSACTIONS ######################################
 - module: src.test.python.ui.automation.implementation.crm.tests_financial_transactions.Test_Tab_Financial_Transaction_Module
   class: TabFinancialTransaction
   tests:
@@ -155,7 +155,7 @@ tests_config:
     - test_check_searching_by_column # Check filters in columns -  all required columns (customer name, date, transaction type, trading account number, transaction number)
     - test_check_search_via_button # Check search using search button
 
-#########################################CAMPAIGN MODULE###############################################
+######################################### CAMPAIGN MODULE ###############################################
 - module: src.test.python.ui.automation.implementation.crm.tests_compaigns_module.Test_Campaigns_Module
   class: CampaignsModuleTest
   tests:
@@ -163,7 +163,7 @@ tests_config:
     - test_edit_campaign
     - test_delete_campaign
 
-#########################################AUTOASSIGN MODULE#############################################
+######################################### AUTOASSIGN MODULE #############################################
 - module: src.test.python.ui.automation.implementation.crm.tests_auto_assign_module.Test_Auto_Assign
   class: AutoAssignModuleTest
   tests:
@@ -185,7 +185,7 @@ tests_config:
   tests:
     - test_crm_configurations_pages_loading
 
-########################################WORKFLOWS MODULE#############################################
+######################################## WORKFLOWS MODULE #############################################
 - module: src.test.python.ui.automation.implementation.crm.tests_workflows.Test_Workflows_Modules
   class: WorkflowsModulesTest
   tests:
@@ -194,14 +194,14 @@ tests_config:
     - test_check_workflow_by_country
     - test_delete_workflow
 
-##########################################USER_MANAGEMENT#########################################
+########################################## USER_MANAGEMENT #########################################
 - module: src.test.python.ui.automation.implementation.crm.user_management.Test_User_Management
   class: UserManagementTest
   tests:
     - test_create_user
     - test_delete_user
 
-##########################################DOCUMENTS MODULE###############################################
+########################################### DOCUMENTS MODULE ###############################################
 - module: src.test.python.ui.automation.implementation.crm.tests_document_module.Test_Document_Module
   class: DocumentModuleTest
   tests:
