--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -1,7 +1,7 @@
 brands:
 
-#- name: 4xfx
-#  config_file: 4xfx.yml
+- name: 4xfx
+  config_file: 4xfx.yml
 
 #- name: brokerz
 #  config_file: brokerz.yml
@@ -12,8 +12,8 @@ brands:
 #- name: q8
 #  config_file: q8.yml
 
-- name: kontofx
-  config_file: kontofx.yml
+#- name: kontofx
+#  config_file: kontofx.yml
 
 #- name: ptbanc
 #  config_file: ptbanc.yml
