--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -1,16 +1,13 @@
 brands:
 
-- name: 4xfx
-  config_file: 4xfx.yml
+#- name: 4xfx
+#  config_file: 4xfx.yml
 
 #- name: brokerz
 #  config_file: brokerz.yml
 
-#- name: tradospot
-#  config_file: tradospot.yml
-
-#- name: q8
-#  config_file: q8.yml
+- name: q8
+  config_file: q8.yml
 
 #- name: kontofx
 #  config_file: kontofx.yml
