--- a/src/test/python/resources/config/brands4.yml
+++ b/src/test/python/resources/config/brands4.yml
@@ -1,8 +1,6 @@
 brands:
 
-#- name: b-finance
-#  config_file: b-finance.yml
-- name: tradospot
-  config_file: tradospot.yml
+- name: ptbanc
+  config_file: ptbanc.yml
 
 
