--- a/src/main/python/ui/crm/model/BrandsXpath/q8_xpath.yml
+++ b/src/main/python/ui/crm/model/BrandsXpath/q8_xpath.yml
@@ -20,7 +20,7 @@ ClientProfilePage:
   deposit_sum: "//tr[@class='lvtColData'][1]//td[3]"
 CALoginPage:
   sign_up: "//a[contains(text(), 'Sign Up')]"
-  submit_btn: "//button[contains (text(), 'Sign Up')]"
+  submit_btn: "//button[contains (text(), 'Sign Up')][not(@disabled)]"
   login_email_input: "//input[@name='email']"
   login_btn_2: "//button[text()='Login']"
   login_btn: "//span[contains(text(), 'Login')]"
