--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -1,12 +1,12 @@
 tests_config:
 
 ######################################MY DASHBOARD TESTS########################################
-#- module: src.test.python.ui.automation.implementation.crm.tests_my_dashboard_module.Test_My_Dashboard_Actions
-#  class: MyDashboardActionsTest
-#  tests:
-#    - test_edit_event_my_dashboard
-#    - test_email_icon
-#    - test_sms_icon
+- module: src.test.python.ui.automation.implementation.crm.tests_my_dashboard_module.Test_My_Dashboard_Actions
+  class: MyDashboardActionsTest
+  tests:
+    - test_edit_event_my_dashboard
+    - test_email_icon
+    - test_sms_icon
 #    - test_sorting_columns
 #    - test_searching_by_columns
 #
@@ -86,10 +86,6 @@ tests_config:
 #- module: src.test.python.ui.automation.implementation.crm.tests_tasks_module.Test_Event
 #  class: AddEventTaskModule
 #  tests:
-#    - test_email_icon
-#    - test_sms_icon
-#    - test_mass_edit_tasks
-#    - test_searching_by_columns
 #    - test_sorting_columns
 #
 #- module: src.test.python.ui.automation.implementation.crm.tests_tasks_module.Test_Calendar_View
@@ -181,20 +177,20 @@ tests_config:
 #    - test_perform_delete_rule
 #
 ###########################################WORKFLOWS MODULE##############################################
-- module: src.test.python.ui.automation.implementation.crm.tests_workflows.Test_Workflows_Modules
-  class: WorkflowsModulesTest
-  tests:
-    - test_create_workflows
-    - test_check_workflow_by_status
-    - test_check_workflow_by_country
-    - test_delete_workflow
+#- module: src.test.python.ui.automation.implementation.crm.tests_workflows.Test_Workflows_Modules
+#  class: WorkflowsModulesTest
+#  tests:
+#    - test_create_workflows
+#    - test_check_workflow_by_status
+#    - test_check_workflow_by_country
+#    - test_delete_workflow
 #
 ##############################################USER MANAGEMENT############################################
 #- module: src.test.python.ui.automation.implementation.crm.user_management.Test_User_Management
 #  class: UserManagementTest
 #  tests:
 #    - test_create_user
-##
+#
 ###########################################DOCUMENTS MODULE###############################################
 #- module: src.test.python.ui.automation.implementation.crm.tests_document_module.Test_Document_Module
 #  class: DocumentModuleTest
