--- a/src/test/python/resources/config/tests2.yml
+++ b/src/test/python/resources/config/tests2.yml
@@ -64,7 +64,7 @@ tests_config:
   tests:
     - test_make_searching_client_module   # Searches for a client.
 
-    PERMISSION FOR DELETE TASKS
+####################################################TASKS##################################################
 - module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Add_Interaction
   class: AddInteraction
   tests:
@@ -80,6 +80,7 @@ tests_config:
     - test_sms_icon
     - test_mass_edit_tasks
     - test_searching_by_columns
+    - test_sorting_columns
 
 - module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Trading_Account
   class: TradingAccountCrmTest
@@ -194,3 +195,5 @@ tests_config:
   class: DocumentModuleTest
   tests:
     - test_searching_by_columns
+    - test_open_tabs
+    - test_sorting
